# textfsm-rs

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: codeql.yml  publish.yml  release.yml  rust.yml
benches/: parsing_benchmark.rs
docs/: advanced_examples.md  architecture.md  common_capture_groups.md  creating_templates.md  usage.md
examples/: cli-table.rs  runfsm.rs  verify-ntctemplates.rs  verifyfsm.rs
src/: cli_table.rs  error.rs  export.rs  lib.rs  varsubst.rs
tests/: export_test.rs  main.rs  parser.rs  streaming.rs  test_continue_action.rs  varsubst.rs
tests/basic_template/: mod.rs
tests/end_to_end/: main.rs  mod.rs  sample.data  sample.template
tests/parser/: mod.rs
tests/real_data/: mod.rs
