[package]
name = "textfsm-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of TextFSM"
license = "Apache-2.0"
repository = "https://github.com/itsvrushabh/textfsm-rs"
authors = ["Rust User <itsvrushabh@gmail.com>"]
keywords = ["textfsm", "parser", "network", "automation"]
categories = ["network-programming", "parsing"]

[lib]
name = "textfsm_rs"
path = "src/lib.rs"

[[bin]]
name = "textfsm"
path = "src/bin/textfsm.rs"

[dependencies]
pest = "2.8.5"
pest_derive = "2.8.5"
regex = "1.12.2"
fancy-regex = "0.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
log = "0.4.29"
env_logger = "0.11.8"
csv = "1.4.0"
thiserror = "2.0.17"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0.149"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parsing_benchmark"
harness = false

